welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:18: error: expected class or object definition
	while (vuBiscuit== false){
        ^Program:22: error: Unmatched closing brace '}' ignored here
  } 
  ^