welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  if (vuBiscuit ==true)
  	return true;
  else
  	return false;
}
var vuBiscuit=false
def chercheBiscuit(){

	for (compteur <- 1 to 6){
    	if (estSurBiscuit){
        vuBiscuit=true}
      avance()  
    }

  recule(6)}
}
	while (vuBiscuit== false){
    droite()
    avance()
    gauche()
  }